# cline-configurator

./: README.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml
docs/features/: README.md  cline-configurator-implementation.md  core-capabilities.md  node-js-environment-configuration.md  node-js-runtime-environment.md  react-based-user-interface.md  sub-module-src-tauri.md  typescript-strong-typing.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: BackupRestoreTab.tsx  DefaultsTab.tsx  HooksTab.tsx  McpTab.tsx  OllamaTab.tsx  ProviderTab.tsx  RecommendationsTab.tsx  RulesTab.tsx
src/services/: tauri.ts
