[package]
name = "cline-configurator"
version = "0.1.0"
description = "Cline Configurator"
authors = ["you"]
edition = "2021"

[lib]
name = "cline_configurator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
walkdir = "2"
